backends/drm: fix gamma ramps with legacy

With legacy, gamma ramps wouldn't be calculated from the color transformation,
which made them not be applied.

BUG: 453070